bk_ida/gccida/c3/compute_block_backward_dependences
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:2998:1: error: use of undeclared identifier 'deps_0'
deps_0 tmp_deps; // [rsp+0h] [rbp-80h] BYREF 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:3004:42: error: use of undeclared identifier 'tmp_deps'; did you mean 'bb_deps'?
memcpy( &tmp_deps, &bb_deps[bb], sizeof( tmp_deps)); 
                                         ^~~~~~~~
                                         bb_deps
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:2394:21: note: 'bb_deps' declared here
static struct deps *bb_deps;
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:3004:10: error: use of undeclared identifier 'tmp_deps'; did you mean 'bb_deps'?
memcpy( &tmp_deps, &bb_deps[bb], sizeof( tmp_deps)); 
         ^~~~~~~~
         bb_deps
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:2394:21: note: 'bb_deps' declared here
static struct deps *bb_deps;
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:3006:17: error: use of undeclared identifier 'tmp_deps'; did you mean 'bb_deps'?
sched_analyze( &tmp_deps, head, tail); 
                ^~~~~~~~
                bb_deps
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:2394:21: note: 'bb_deps' declared here
static struct deps *bb_deps;
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:3009:23: error: use of undeclared identifier 'tmp_deps'; did you mean 'bb_deps'?
propagate_deps( bba, &tmp_deps); 
                      ^~~~~~~~
                      bb_deps
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:2394:21: note: 'bb_deps' declared here
static struct deps *bb_deps;
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:3010:13: error: use of undeclared identifier 'tmp_deps'; did you mean 'bb_deps'?
free_deps( &tmp_deps); 
            ^~~~~~~~
            bb_deps
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/sched-rgn.c:2394:21: note: 'bb_deps' declared here
static struct deps *bb_deps;
                    ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_block_backward_dependences/src/obj/sched-rgn.o] Error 1
